--- a/Staff/src/main/res/layout/activity_scanner_tiang.xml
+++ b/Staff/src/main/res/layout/activity_scanner_tiang.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".scanner.ScannerActivity">
+    tools:context=".tiang.ScannerTiangActivity">
 
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
