--- a/Staff/src/main/res/layout/activity_edit_profile.xml
+++ b/Staff/src/main/res/layout/activity_edit_profile.xml
@@ -41,40 +41,41 @@
 
         </LinearLayout>
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/img_profile"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_profile"
-            android:tint="@color/primaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ll_header"
-            app:riv_corner_radius="10dp" />
+        <!--        <com.makeramen.roundedimageview.RoundedImageView-->
+        <!--            android:id="@+id/img_profile"-->
+        <!--            android:layout_width="130dp"-->
+        <!--            android:layout_height="130dp"-->
+        <!--            android:layout_marginTop="16dp"-->
+        <!--            android:src="@drawable/ic_profile"-->
+        <!--            android:tint="@color/primaryColor"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/ll_header"-->
+        <!--            app:riv_corner_radius="10dp" />-->
 
-        <TextView
-            android:id="@+id/btn_change_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:text="@string/change_photo"
-            android:textColor="@color/secondaryLightColor"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_profile" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/btn_change_img"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:layout_marginTop="8dp"-->
+        <!--            android:text="@string/change_photo"-->
+        <!--            android:textColor="@color/secondaryLightColor"-->
+        <!--            android:textSize="18sp"-->
+        <!--            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/img_profile" />-->
 
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_change_img">
+            app:layout_constraintTop_toBottomOf="@+id/ll_header">
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
