--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/ll_body"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:fontFamily="sans-serif-black"
-        android:text="asdfasdfds"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/ll_body"
