--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:background="@drawable/menu_box"
-                    android:backgroundTint="@color/md_blue_100"
+                    android:backgroundTint="@color/primaryColor"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:gravity="center"
                     android:orientation="horizontal">
@@ -88,7 +88,7 @@
                             android:layout_height="wrap_content"
                             android:contentDescription="@string/icon_qrcode"
                             android:src="@drawable/ic_scan_qr"
-                            app:tint="@color/md_blue_900" />
+                            app:tint="@color/secondaryColor" />
 
                     </LinearLayout>
 
@@ -98,7 +98,7 @@
                         android:fontFamily="sans-serif-medium"
                         android:gravity="center"
                         android:text="@string/scan_qr"
-                        android:textColor="@color/md_blue_900"
+                        android:textColor="@color/white"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -172,7 +172,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_weight="1"
                         android:background="@drawable/menu_box"
-                        android:backgroundTint="@color/md_deep_orange_100"
+                        android:backgroundTint="@color/primaryColor"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -191,7 +191,7 @@
                                 android:layout_height="wrap_content"
                                 android:contentDescription="@string/icon_restart"
                                 android:src="@drawable/ic_restart"
-                                app:tint="@color/md_deep_orange_900" />
+                                app:tint="@color/secondaryColor" />
 
                         </LinearLayout>
 
@@ -201,7 +201,7 @@
                             android:fontFamily="sans-serif-medium"
                             android:gravity="center"
                             android:text="@string/restart_router"
-                            android:textColor="@color/md_deep_orange_900"
+                            android:textColor="@color/white"
                             android:textSize="16sp" />
 
                     </LinearLayout>
@@ -212,7 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/menu_box"
-                        android:backgroundTint="@color/md_green_100"
+                        android:backgroundTint="@color/primaryColor"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -231,7 +231,7 @@
                                 android:layout_height="wrap_content"
                                 android:contentDescription="@string/icon_tiang"
                                 android:src="@drawable/ic_pole"
-                                app:tint="@color/md_green_900" />
+                                app:tint="@color/secondaryColor" />
 
                         </LinearLayout>
 
@@ -241,7 +241,7 @@
                             android:fontFamily="sans-serif-medium"
                             android:gravity="center"
                             android:text="@string/edit_data_tiang"
-                            android:textColor="@color/md_green_900"
+                            android:textColor="@color/white"
                             android:textSize="16sp" />
 
                     </LinearLayout>
@@ -263,7 +263,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_weight="1"
                         android:background="@drawable/menu_box"
-                        android:backgroundTint="@color/md_cyan_100"
+                        android:backgroundTint="@color/primaryColor"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -282,7 +282,7 @@
                                 android:layout_height="wrap_content"
                                 android:contentDescription="@string/icon_good_things"
                                 android:src="@drawable/ic_good"
-                                app:tint="@color/md_cyan_900" />
+                                app:tint="@color/secondaryColor" />
 
                         </LinearLayout>
 
@@ -292,7 +292,7 @@
                             android:fontFamily="sans-serif-medium"
                             android:gravity="center"
                             android:text="@string/tambahkan_hal_baik_hari_ini"
-                            android:textColor="@color/md_cyan_900"
+                            android:textColor="@color/white"
                             android:textSize="16sp" />
 
                     </LinearLayout>
@@ -303,7 +303,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@drawable/menu_box"
-                        android:backgroundTint="@color/md_blue_grey_100"
+                        android:backgroundTint="@color/primaryColor"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
@@ -322,7 +322,7 @@
                                 android:layout_height="wrap_content"
                                 android:contentDescription="@string/icon_tiang"
                                 android:src="@drawable/ic_setting"
-                                app:tint="@color/md_blue_grey_900" />
+                                app:tint="@color/secondaryColor" />
 
                         </LinearLayout>
 
@@ -332,7 +332,7 @@
                             android:fontFamily="sans-serif-medium"
                             android:gravity="center"
                             android:text="@string/settings"
-                            android:textColor="@color/md_blue_grey_900"
+                            android:textColor="@color/white"
                             android:textSize="16sp" />
 
                     </LinearLayout>
